--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,6 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   dio: ^5.7.0
   equatable: ^2.0.7
@@ -38,6 +36,7 @@ dependencies:
   flutter_bloc: ^9.0.0
 
 dev_dependencies:
+  bloc_test: ^10.0.0
   build_runner: ^2.4.11
   flutter_lints: ^3.0.0
   flutter_test:
