--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_network_image: ^3.4.1
   cupertino_icons: ^1.0.6
   dio: ^5.7.0
   equatable: ^2.0.7
   flutter:
     sdk: flutter
   flutter_bloc: ^9.0.0
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   bloc_test: ^10.0.0
@@ -41,6 +45,7 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
+  isar_generator: ^3.1.0+1
   mockito: ^5.4.0
 
 # For information on the generic Dart part of this file, see the
